--- a/data/release_posts/unreleased/manage-integrate-newly-created-gem-supporting-microsoft-graph-api-.yml
+++ b/data/release_posts/unreleased/manage-integrate-newly-created-gem-supporting-microsoft-graph-api-.yml
@@ -1,8 +1,7 @@
 ---
 features:
   secondary:
-  - name: "Integrate newly created gem supporting Microsoft Graph API email sending
-      into GitLab"
+  - name: "Support delivery of emails using Microsoft Graph API with OAuth 2.0 client credentials flow"
     available_in: [core, premium, ultimate]
     gitlab_com: true
     documentation_link: 'https://docs.gitlab.com/ee/#amazing'
@@ -10,6 +9,6 @@ features:
     stage: manage
     categories:
     - Authentication and Authorization
-    issue_url: 'https://gitlab.com/gitlab-org/gitlab/-/issues/365524'
+    issue_url: 'https://gitlab.com/groups/gitlab-org/-/epics/8259'
     description: |
       Lorem ipsum [dolor sit amet](#link), consectetur adipisicing elit. Perferendis nisi vitae quod ipsum saepe cumque quia `veritatis`.
