--- a/data/team_members/person/j/jessieay.yml
+++ b/data/team_members/person/j/jessieay.yml
@@ -16,6 +16,7 @@ departments:
 - Manage:Authentication and Authorization BE Team
 projects:
   gitlab: reviewer backend
-specialty: "Authentication & Authorization"
+specialty:
+- 'Manage: Authentication and Authorization'
 story: Jessie has built software for early stage start-ups, the United States Federal Government, Fortune 500 companies, and everything in between. She is famous for her creative use of emojis in code review comments.
 
