Change reporting manager

--- a/data/team_members/person/v/vincywilson.yml
+++ b/data/team_members/person/v/vincywilson.yml
@@ -4,7 +4,7 @@ placeholder: true
 locality:
 country: Remote
 role: <a href="/job-families/engineering/engineering-management-quality/#senior-manager-quality-engineering">Interim Senior Manager, Quality Engineering</a>, Enablement, Fulfillment, Growth, Sec and ModelOps
-reports_to: tanyapazitny
+reports_to: mek
 picture: vincywilson.jpg
 twitter:
 gitlab: vincywilson
