Fix typo mistakes, fix links (twitter,linkedin), fix department, fix story

--- a/data/team_members/person/t/tsukasa.k.yml
+++ b/data/team_members/person/t/tsukasa.k.yml
@@ -6,14 +6,15 @@ reports_to: pbopardikar
 picture: tsukasa_komatsubara.png
 pronouns: They/Them
 pronunciation: tsu-ka-sa
-twitter: https://twitter.com/GL_Tsukasa
-linkedin: https://www.linkedin.com/in/t-komatsubara/
-gitlab: tsukasa.k
+twitter: GL_Tsukasa
+linkedin: t-komatsubara
+gitlab: tkomatsubara
 departments:
   - Customer Success
   - Solutions Architects
+  - Solution Architects
+  - SA
 specialty: ""
 expertise:
 story:
-  'Tsukasa has over 20 years of experience in the IT industry, which includes software development, localization, technical consulting, technical sales, architecting, and partner enablement. They are married and have two children, and enjoys working remotely and traveling. Their hobbies include cooking, dessert hunting, and programming retro computers. MSX, for example.
-They will be primarily responsible for APAC partner'
+  'Tsukasa has over 20 years of experience in the IT industry, which includes software development, localization, technical consulting, technical sales, architecting, and partner enablement. They are married and have two children, and enjoys working remotely and traveling. Their hobbies include cooking, dessert hunting, and programming retro computers. MSX, for example. They will be primarily responsible for APAC partners.'
