Add frontend reviewer role for gitlab project

--- a/data/team_members/person/a/andrei.zubov.yml
+++ b/data/team_members/person/a/andrei.zubov.yml
@@ -9,6 +9,8 @@ pronouns: he/him
 twitter: reflectiondm
 linkedin: andreizubov
 gitlab: andrei.zubov
+projects:
+  gitlab: reviewer frontend
 departments:
   - Development
 specialty: ""
