Adding Corina Vargas' Information to Gitlab.com Team Page

--- a/data/team_members/person/c/cvargas27.yml
+++ b/data/team_members/person/c/cvargas27.yml
@@ -1,17 +1,17 @@
 name: Corina Vargas
 locality: 
 country: Remote
-role: <a href="">Professional Services Project Coordinator</a>
+role: <a href="/job-families/sales/professional-services-operations/">Professional Services Project Coordinator</a>
 reports_to: psprojectcoor-donita-f
-picture: ../gitlab-logo-extra-whitespace.png
-pronouns:
-pronunciation:
+picture: corinavargas.png
+pronouns: She/Her
+pronunciation: Core - eena
 twitter:
+departments: 
+- Professional Services
 linkedin:
 gitlab: cvargas27
-departments:
-  - Consulting Delivery
-specialty: "Sales"
+specialty:
 expertise:
 story:
 
