--- a/data/team_members/person/g/greg-myers.yml
+++ b/data/team_members/person/g/greg-myers.yml
@@ -2,22 +2,15 @@
 name: Greg Myers
 locality:
 country: Remote
-role: <a href="/job-families/engineering/support-engineer/#senior-support-engineer">Senior
-  Support Engineer</a>
-reports_to: ronnie-alfaro
+role: <a href="/job-families/engineering/application-security/">Security Engineer</a>
+reports_to: andrewkelly
 picture: gregmyers.png
 twitter: laiuydfoiu
 gitlab: greg
 departments:
-- Engineering Function
-- Customer Support
-expertise: |
-  <li><a href="/handbook/on-call/">On-call</a> champion!</li>
-  <li><a href="https://docs.gitlab.com/omnibus/">Omnibus</a> <a href="/company/team/structure/#expert">expert</a></li>
-  <li><a href="https://about.gitlab.com/handbook/marketing/community-relations/">Community Relations</a></li>
-story: 'I like solving problems, helping others, and open source. In my spare time
-  I enjoy reading, playing guitar, exploring nature, and learning new things.
-
-  '
+  - Security
+  - Security Department
 specialty: Application Security
-
+story: 'I like solving problems, helping others, security, and open source. In my spare time
+  I enjoy reading, playing guitar, exploring nature, and learning new things.
+  '
