Update team page entry with new group assignments

--- a/data/team_members/person/a/ashrafkhamis.yml
+++ b/data/team_members/person/a/ashrafkhamis.yml
@@ -25,6 +25,7 @@ projects:
   omnibus-gitlab: maintainer docs
 specialty:
 - 'Ecosystem: Integrations'
+- 'Enablement: Global Search'
+- 'Create: Editor'
 expertise:
 story:
-
