Update Pavel Shutsin info to Plan

--- a/data/team_members/person/p/pavelshutsin.yml
+++ b/data/team_members/person/p/pavelshutsin.yml
@@ -3,7 +3,7 @@ name: Pavel Shutsin
 locality:
 country: Remote
 role: <a href="/job-families/engineering/development/backend/">Senior Backend Engineer</a>,
-  Manage:Optimize
+  Plan:Optimize
 reports_to: brandon-l
 picture: pavelshutsin.jpg
 twitter: by_pluff
@@ -13,19 +13,19 @@ departments:
 - Engineering Function
 - Development Department
 - Dev Section
-- Manage:Optimize BE Team
+- Plan:Optimize BE Team
 projects:
   gitlab: 
     - maintainer backend
     - reviewer database
-    - trainee_maintainer database
+    - maintainer database
 story: 'Pavel is a Ruby developer with strong thirst of making fast, stable, secure
-  and flexible software. As a hobby Pavel does snowboarding, plays basketball and
-  drives racing karts.
+  and flexible software. As a hobby Pavel does snowboarding, plays basketball,
+  drives real and virtual racing cars.
 
   '
 specialty:
-  - 'Manage: Optimize'
+  - 'Plan: Optimize'
 domain_experise:
   - ruby
   - rails
