--- a/data/team_members/person/a/apiotrowski1.yml
+++ b/data/team_members/person/a/apiotrowski1.yml
@@ -3,11 +3,11 @@ locality:
 country: Remote
 role: <a href="">Manager, Support Engineering</a>
 reports_to: lee-m
-picture: ../gitlab-logo-extra-whitespace.png
+picture: angelapiotrowski.jpg
 pronouns:
 pronunciation:
 twitter:
-linkedin:
+linkedin: angela-piotrowski-m-s-7852012a
 gitlab: apiotrowski1
 departments:
   - Customer Support
