--- a/data/redirects.yml
+++ b/data/redirects.yml
@@ -1,3 +1,6 @@
+- sources: /handbook/marketing/community-relations/education-program/
+  target: /handbook/marketing/community-relations/community-programs/education-program/
+  comp_op: '='
 - sources: /handbook/business-ops/
   target: /handbook/business-technology/
   comp_op: '~'
