Apply 1 suggestion(s) to 1 file(s)

--- a/data/release_posts/unreleased/bugs.yml
+++ b/data/release_posts/unreleased/bugs.yml
@@ -9,4 +9,4 @@ tertiary:
     description: |
       Some of the notable bug fixes in 15.5 are:
 
-      - [Description](https://gitlab.com/gitlab-org/gitlab-ce/issues/12345).
+      - [Progressively load CI/CD variable for 100+](https://gitlab.com/gitlab-org/gitlab/-/issues/372728).
