--- a/data/team_members/person/c/calebcooper.yml
+++ b/data/team_members/person/c/calebcooper.yml
@@ -11,11 +11,13 @@ twitter:
 gitlab: calebcooper
 departments:
 - Customer Support
+- Customer Success
 expertise: |
   <li> Linux </li>
   <li> Scripting, <a href="https://git.technolibre.net/bashadventures/bashadventures">especially BASH</a> </li>
   <li> Customer Support </li>
-story: Caleb is a Support Engineer in the Americas team. He came to GitLab from <a
+story: Caleb is a Support Engineer in the US Federal team and is participating in an 
+  internship with the Public Sector Customer Success team. He came to GitLab from <a
   href="https://www.ornl.gov">Oak Ridge National Laboratory</a>. Caleb enjoys solving
   hard problems and seeing others succeed. For the last several years, he has been
   spending his free time writing <a href="https://git.technolibre.net/bashadventures/bashadventures">a
