--- a/data/team_members/person/v/vasilii-iakliushin.yml
+++ b/data/team_members/person/v/vasilii-iakliushin.yml
@@ -3,7 +3,7 @@ name: Vasilii Iakliushin
 locality:
 country: Remote
 role: <a href="/job-families/engineering/development/backend/">Senior Backend Engineer</a>,
-  Create:Source Code
+  Create:Source Code, Systems:Gitaly API
 reports_to: sean-carroll
 picture: vasilii-iakliushin.jpg
 gitlab: vyaklushin
