--- a/data/categories.yml
+++ b/data/categories.yml
@@ -1679,7 +1679,7 @@ continuous_delivery:
   available: 2017-01-01
   viable: 2017-01-01
   complete: 2017-01-01
-  lovable:
+  lovable: 2024-01-22
   maturity: complete
   marketing: true
   priority_level: medium
@@ -1706,8 +1706,8 @@ advanced_deployments:
   roi: false
   available: 2017-05-22
   viable: 2018-04-22
-  complete:
-  lovable:
+  complete: 2024-01-22
+  lovable: 2025-01-22
   maturity: viable
   marketing: true
   priority_level: low
@@ -1727,8 +1727,8 @@ feature_flags:
   roi: false
   available: 2018-10-22
   viable: 2019-03-22
-  complete:
-  lovable:
+  complete: 2024-01-22
+  lovable: 2025-01-22
   maturity: viable
   marketing: true
   priority_level: medium
@@ -1747,9 +1747,9 @@ release_evidence:
   description: "Release Evidence includes all the assurances and evidence collection that are necessary for you to trust the changes you're delivering."
   roi: false
   available: 2020-01-22
-  viable:
-  complete:
-  lovable:
+  viable: 2024-01-22
+  complete: 2025-01-22
+  lovable: 2025-06-22
   maturity: minimal
   marketing: true
   dogfooding_status: Exclusive
@@ -1787,8 +1787,8 @@ environment_management:
   roi: true
   available: 2017-01-01
   viable: 2022-10-22
-  complete:
-  lovable:
+  complete: 2023-06-22
+  lovable: 2024-06-22
   maturity: minimal
   marketing: true
   priority_level: high
