--- a/data/mvps.yml
+++ b/data/mvps.yml
@@ -1,3 +1,7 @@
+- version: "15.4"
+  name: "Lennard Sprong"
+  gitlab: X_Sheep
+  date: "September 22, 2022"
 - version: "15.3"
   name: "Marco Zille"
   gitlab: zillemarco
