--- a/data/release_posts/unreleased/manage-allow-group-owners-to-update-group-members-saml-and-scim-ex.yml
+++ b/data/release_posts/unreleased/manage-allow-group-owners-to-update-group-members-saml-and-scim-ex.yml
@@ -1,14 +1,13 @@
 ---
 features:
   secondary:
-  - name: "Allow group owners to update group members' SAML (and SCIM) extern_uid
-      via API"
-    available_in: [core, premium, ultimate]
+  - name: "Allow updates to group members' SAML and SCIM extern_uid via API"
+    available_in: [silver, gold]
     gitlab_com: true
-    documentation_link: 'https://docs.gitlab.com/ee/#amazing'
+    documentation_link: 'https://docs.gitlab.com/ee/user/group/saml_sso/#get-in-to-gitlabcom-with-saml'
     reporter: hsutor
     stage: manage
-    categories: []
+    categories: User Management
     issue_url: 'https://gitlab.com/gitlab-org/gitlab/-/issues/227841'
     description: |
-      Lorem ipsum [dolor sit amet](#link), consectetur adipisicing elit. Perferendis nisi vitae quod ipsum saepe cumque quia `veritatis`.
+      Previously, if there were changes related to group members' SAML and SCIM `extern_uid`, the only way to update it was using the SCIM API (which is not recommended) or by a manual re-linking process. Now, you can update the `extern_uid` field for both SAML and SCIM identities using a new endpoint in the groups API.
