Make Bogdan Denkovych a GitLab backend maintainer

--- a/data/team_members/person/b/bdenkovych.yml
+++ b/data/team_members/person/b/bdenkovych.yml
@@ -14,7 +14,7 @@ departments:
 - Dev Section
 - Manage:Authentication and Authorization BE Team
 projects:
-  gitlab: reviewer backend
+  gitlab: maintainer backend
 domain_expertise:
 - ruby
 - rails
